--- a/submit_page.html
+++ b/submit_page.html
@@ -229,7 +229,7 @@
 		</script>
 
 	<script async defer
-		src = "https://maps.googleapis.com/maps/api/js?key=AIzaSyBOy7YYg-sL2ODe25SfxSPpNL1P5YznIPI&callback=initMap&libraries=&v=weekly"> // Establish map API
+		src = "https://maps.googleapis.com/maps/api/js?key=your_API_key&callback=initMap&libraries=&v=weekly"> // Establish map API
     </script>
 	</body>
 </html>
